# RayTracing

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  _tuple.h  canvas.cpp  canvas.h  canvas_test.cpp  color.h  color_test.cpp  environment.h  intersection.h  intersection_collection.h  intersection_test.cpp  log_helper.h  matrix.h  matrix_test.cpp  point_test.cpp  projectile.h  projenv_demo.cpp  ray.h  ray_test.cpp  transform.h  transform_test.cpp  transformation_demo.cpp  tuple.h  tuple_test.cpp  utility.h  utility_test.cpp  vector_test.cpp
src/camera/: camera.cpp  camera.h
src/demo/: projenv_demo.cpp  render_world_demo.cpp  render_world_demo_2.cpp  render_world_demo_reflection.cpp  sphere_demo.cpp  sphere_with_material_demo.cpp  transformation_demo.cpp
src/environment/: environment.h  projectile.h
src/geometry/: transform.cpp  transform.h
src/image/: canvas.cpp  canvas.h  color.h
src/light/: light.h  pointlight.h
src/material/: ab_color.h  checker_pattern.h  gradient_pattern.h  material.h  pattern.cpp  pattern.h  phong.cpp  phong.h  ring_pattern.h  stripe_pattern.cpp  stripe_pattern.h
src/math/: _point.h  _tuple.h  _vector.h  matrix.cpp  matrix.h  pi.h  tuple.h  util.h
src/ray/: computation.cpp  computation.h  intersection.h  intersection_collection.cpp  intersection_collection.h  ray.cpp  ray.h
src/shape/: basicshape.cpp  basicshape.h  plane.cpp  plane.h  shapebuilder.cpp  shapebuilder.h  shapefwddecl.h  sphere.cpp  sphere.h
src/utility/: debug.h  linked_list.h  log_helper.h  memory_pool.h  utility.h
src/world/: world.cpp  world.h
test/: CMakeLists.txt  camera_test.cpp  canvas_test.cpp  color_test.cpp  intersection_test.cpp  light_test.cpp  material_test.cpp  matrix_test.cpp  pattern_test.cpp  plane_test.cpp  point_test.cpp  ray_test.cpp  shape_test.cpp  sphere_test.cpp  transform_test.cpp  tuple_test.cpp  utility_test.cpp  vector_test.cpp  world_test.cpp
